# ReText_transformer

./: .gitignore  README.md  cuda_check.py  main.py  pyproject.toml
log/: Log_ReText_Harry_size-0.083B_B-1_T-512_C-512_nh-16_tb-10_dr-0.1_V-50257_lr-0.0001.txt
modules/: Memory_v0.py  Musician.py  ReText_V0.py  ReText_v1.py  ReText_v2.py  batcher.py  model_config.py  t.py  test.py  test_config.py
modules/configs/: Memory_v0.py  Musician.py
modules/encoders/: MathEncoder.py
modules/log/: Log_ReText_Harry_size-0.077B_B-1_T-512_C-512_nh-16_tb-8_dr-0.1_V-50257_lr-0.0003.txt  Log_ReText_Harry_size-0.083B_B-1_T-512_C-512_nh-16_tb-10_dr-0.1_V-50257_lr-0.0001.txt
modules/models/Math/: Math.py
modules/models/Math/model_parts/: head.py  math_block.py  multi_head_math.py
modules/models/Memory_v0/: transformer.py
modules/models/Memory_v0/model_parts/: attention_head.py  feed_forward.py  multi_head_attention.py  transformer_block.py
modules/models/Musician/: transformer.py
modules/models/Musician/model_parts/: attention_head.py  feed_forward.py  multi_head_attention.py  transformer_block.py
modules/models/Transformer/: Transformer.py
modules/models/Transformer/model_parts/: attention_head.py  feed_forward.py  multi_head_attention.py  transformer_block.py
modules/plotter/: pyplot.py
modules/utils/: ModelInputGenerators.py  Monitors.py  SaveLoader.py  Sound.py  find_project_root.py
